--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
         />
         <title>Study Typescript Advanced</title>
-        <script src="dist/app.js" defer></script>
-        <script src="dist/generics.js" defer></script>
+        <!-- <script src="dist/app.js" defer></script>
+        <script src="dist/generics.js" defer></script> -->
+        <script src="dist/decorators.js" defer></script>
     </head>
     <body>
         <div class="container"></div>
         <button class="btn" id="btn">Push</button>
+        <hr>
+        <div id="card"></div>
     </body>
 </html>
