--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
         />
         <title>Study Typescript Advanced</title>
         <!-- <script src="dist/app.js" defer></script>
-        <script src="dist/generics.js" defer></script> -->
-        <script src="dist/decorators.js" defer></script>
+        <script src="dist/generics.js" defer></script>
+        <script src="dist/decorators.js" defer></script> -->
+        <script src="dist/namespaces.js" defer></script>
     </head>
     <body>
         <div class="container"></div>
         <button class="btn" id="btn">Push</button>
-        <hr>
+        <hr />
         <div id="card"></div>
+        <hr />
+        <div style="width: 100px">
+            <input type="number" value="0" placeholder="0" />
+        </div>
     </body>
 </html>
